--- a/celery/2015-02-12-gocelery.com.md
+++ b/celery/2015-02-12-gocelery.com.md
@@ -75,13 +75,14 @@ Refuses weak passwords (short passwords and/or common passwords) used to secure 
 
 Provides 2FA authentication feature
 
-* To a certain degree, authentication using text messages is required.
-  However, according to @dthakur, "We do not require 2FA for sensitive
-  operations."
+* 2FA is an option in the screen *UserName* -> Account -> Security. It
+  must be manually enabled. However, according to @dthakur, "We do not
+  require 2FA for sensitive operations."
 
 Reminds the user to enable 2FA by email or in the main UI of the wallet
 
-* Yes.
+* No. Asked @dthakur to consider enabling one of the above
+  TK:update-with-reply
 
 User session is not persistent, or requires authentication for spending
 
@@ -91,8 +92,9 @@ User session is not persistent, or requires authentication for spending
 
 Provides account recovery feature
 
-* Untested password reset button on the login screen. Non-conclusively
-  discussed loss of 2FA device with @dthakur.  TK: discuss more
+* Untested password reset button on the login screen. @dthakur says that
+  they will call confirmed mobile number and ask questions from user
+  account if 2FA device is lost.
 
 ### Optional criterias (some could become requirements):
 
